syntax = "proto3";

package user;

import "google/protobuf/empty.proto";

option go_package = "./pb/userpb";

service User {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc GetUserData(EmailRequest) returns (UserData);
    rpc GetAvailableDriver(google.protobuf.Empty) returns (DriverData);
    rpc SetDriverStatusOnline(DriverId) returns (google.protobuf.Empty);
    rpc SetDriverStatusOngoing(DriverId) returns (google.protobuf.Empty);
    rpc SetDriverStatusOffline(DriverId) returns (google.protobuf.Empty);
}

message DriverId {
    uint32 id = 1;
}

message DriverData {
    uint32 id = 1;
    string name = 2;
}

message EmailRequest {
    string email = 1;
}

message UserData {
    uint32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string password = 5;
    string birth_date = 6;
    string role = 7;
}

message RegisterRequest {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string password = 4;
    string birth_date = 5;
    uint32 role_id = 6;
}

message RegisterResponse {
    uint32 user_id = 1;
    string created_at = 2;
}